--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
 	"useTabs": true,
 	"singleQuote": false,
 	"semi": false,
-	"trailingComma": "always",
+	"trailingComma": "all",
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
