--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/eslint": "^8.56.10",
 		"eslint": "^9.4.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-svelte": "^2.39.0",
 		"globals": "^15.3.0",
 		"prettier": "^3.3.0",
