--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
 		"eslint": "^9.4.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-svelte": "^2.39.0",
-		"globals": "^15.3.0",
-		"prettier": "^3.3.0",
-		"prettier-plugin-svelte": "^3.2.3",
-		"svelte": "^4.2.17",
+		"eslint-plugin-svelte": "^2.39.3",
+		"globals": "^15.4.0",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.4",
+		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.0",
-		"tslib": "^2.6.2",
+		"tslib": "^2.6.3",
 		"typescript": "^5.4.5",
-		"typescript-eslint": "^8.0.0-alpha.26",
-		"vite": "^5.2.12"
+		"typescript-eslint": "^7.13.0",
+		"vite": "^5.2.13"
 	},
 	"type": "module",
-	"packageManager": "yarn@4.2.2",
+	"packageManager": "yarn@4.3.0",
 	"dependencies": {
 		"rxdb": "^15.24.0",
 		"rxjs": "^7.8.1",
