--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,14 @@
 	"singleQuote": false,
 	"semi": false,
 	"trailingComma": "all",
-	"printWidth": 100,
+	"printWidth": 90,
 	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
