--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"rxdb": "^15.24.0",
 		"rxjs": "^7.8.1",
+		"svelte-awesome-color-picker": "^3.1.0",
 		"ts-pattern": "^5.2.0"
 	}
 }
